--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="imagenes/imagen1.png" class="imagen1" width="350px" alt="imagen1">
+  <img src="imagen1.png" class="imagen1" width="350px" alt="imagen1">
   <h1 class="titulo">¿Listo para organizar tus tareas?</h1> 
-  <img src="imagenes/im2.png" class="im2" width="200 px" alt="im2">
+  <img src="im2.png" class="im2" width="200 px" alt="im2">
   <button class="boton-comenzar" onclick="cambiarContenido()"><strong>Comenzar</strong></button>
   <script src="script.js"> </script> 
 </body>
